src/objects/Price__c.object
<CustomObject>
    <fields>
        <fullName>Addon__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Addon</label>
        <referenceTo>Addon__c</referenceTo>
        <relationshipLabel>Prices</relationshipLabel>
        <relationshipName>Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateFrom__c</fullName>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTo__c</fullName>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flight__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flight</label>
        <referenceTo>Flight__c</referenceTo>
        <relationshipLabel>Prices</relationshipLabel>
        <relationshipName>Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Price</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PriceValidationRule</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
Flight__c == NULL,
Addon__c == NULL
)</errorConditionFormula>
        <errorMessage>Flight or addon can&apos;t be empty!</errorMessage>
    </validationRules>
</CustomObject>